<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">
<com.google.android.material.textfield.TextInputLayout
    app:layout_constraintTop_toTopOf="parent"
    android:layout_marginTop="250dp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:layout_width="match_parent"
    app:startIconDrawable="@android:drawable/sym_action_email"
    android:layout_height="50dp"
    android:layout_marginEnd="43dp"
    android:layout_marginStart="43dp"
    android:id="@+id/textinput1"
    android:hint="@string/email"
    android:background="@drawable/edit_text_box">

    <EditText
        android:id="@+id/email"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:textColor="@color/common_google_signin_btn_text_dark_pressed"
        android:textStyle="bold"
        tools:ignore="LabelFor" />
</com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        app:layout_constraintTop_toBottomOf="@id/textinput1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_marginTop="5dp"
        app:startIconDrawable="@android:drawable/ic_lock_idle_lock"
        android:layout_height="50dp"
        android:layout_marginEnd="43dp"
        android:layout_marginStart="43dp"
        android:id="@+id/textinput2"
        android:hint="@string/password"
        android:background="@drawable/edit_text_box">

        <EditText
            android:id="@+id/password"
            style="@style/Widget.AppCompat.EditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:textColor="@color/common_google_signin_btn_text_dark_default"
            android:textStyle="bold"
            tools:ignore="LabelFor" />
    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/textinput2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="45dp"
        android:text="@string/login"
        android:id="@+id/login"
        android:textStyle="italic"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        android:textAllCaps="true"
        android:textColorHighlight="@color/colorAccent"
        android:background="@drawable/button_shape"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login"
        android:layout_marginTop="100dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_to_this_app"
            android:textAllCaps="true"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginStart="100dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textAllCaps="true"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:layout_marginStart="3dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/here"
            android:layout_marginStart="3dp"
            android:clickable="true"
            android:id="@+id/Register"
            android:textColorHighlight="@color/colorAccent"
            android:textColor="@color/colorAccent"
            android:focusable="true" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>