<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:background="@drawable/edit_text_box"
    android:layout_margin="12dp">
<ImageView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/small_cirlce"
    android:id="@+id/view_profile_pic"
   android:layout_margin="10dp"
    android:layout_gravity="center_vertical"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginEnd="12dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:id="@+id/question_username"
            android:textColor="@android:color/black"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"/>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="13dp"
            app:hintEnabled="true"
            android:padding="5dp"
            android:hint="@string/question"
            app:startIconDrawable="@drawable/ic_baseline_menu_book_24"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/question"
                android:paddingStart="3dp"
                android:id="@+id/question_ofuser"
                android:maxLength="100"
                android:ellipsize="end"
                tools:ignore="RtlSymmetry" />
        </com.google.android.material.textfield.TextInputLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/type"
                android:layout_marginBottom="12dp"
                android:textColorHint="@android:color/black">
                <TextView
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:text="@string/type"
                    android:maxLength="14"
                    android:id="@+id/question_type"
                    android:ellipsize="end"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/time"
                android:layout_marginBottom="12dp"
                android:textColorHint="@android:color/black">
                <TextView
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:text="@string/time"
                    android:id="@+id/question_addedtime"
                    android:maxLength="14"
                    android:ellipsize="end"/>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>