<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ProfileFragment"
    android:orientation="vertical">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/profile_image"
        android:background="@drawable/image_holder"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        tools:ignore="ContentDescription"
        />
 <com.google.android.material.textfield.TextInputLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginTop="22dp"
     android:background="@drawable/edit_text_box"
     android:paddingStart="12dp"
     tools:ignore="RtlSymmetry"
     android:hint="@string/name"
     android:layout_marginStart="44dp"
     android:layout_marginEnd="44dp"
     android:textColorHint="@android:color/black">
     <EditText
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:maxLength="15"
         android:ellipsize="end"
         android:id="@+id/view_username"
         android:inputType="textPersonName"
         android:drawableStart="@drawable/ic_baseline_account_circle_small"
         android:background="@android:color/transparent"
         android:importantForAutofill="no"
         tools:ignore="LabelFor"
         />
 </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/edit_text_box"
        android:paddingStart="12dp"
        tools:ignore="RtlSymmetry"
        android:hint="@string/email"
        android:layout_marginStart="44dp"
        android:layout_marginEnd="44dp"
        android:textColorHint="@android:color/black">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:maxLength="15"
            android:ellipsize="end"
            android:id="@+id/viewemal"
            android:inputType="textEmailAddress"
            android:drawableStart="@drawable/ic_baseline_email_24"
            android:background="@android:color/transparent"
            android:importantForAutofill="no"
            tools:ignore="LabelFor"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/edit_text_box"
        android:paddingStart="12dp"
        tools:ignore="RtlSymmetry"
        android:hint="@string/birthday"
        android:layout_marginStart="44dp"
        android:layout_marginEnd="44dp"
        android:textColorHint="@android:color/black">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/viewbirthday"
            android:maxLength="15"
            android:ellipsize="end"
            android:inputType="date"
            android:drawableStart="@drawable/ic_baseline_calendar_today_24"
            android:background="@android:color/transparent"
            android:importantForAutofill="no"
            tools:ignore="LabelFor" />
    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_shape"
        android:text="@string/logout"
        android:id="@+id/logout"
        android:layout_gravity="bottom|center"
        android:layout_marginTop="72dp"/>
</LinearLayout>